Tercer comentario:editado párrafo card

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           <img src="./assets/img/card3.jpg" class="card-img-top pb-2" alt="Plumón Coral Fleece">
           <div class="card-body">
             <h5 class="card-title">Zona Norte</h5>
-            <p class="card-text">El Norte grande es una de las cinco regiones naturales en que tradicionalmente se divide Chile. Se inicia a partir la regiones de Arica y Parinacota, Tarapacá, Antofagasta.</p>
+            <p class="card-text">El Norte grande es una de las cinco regiones naturales en que tradicionalmente se divide Chile. Se inicia a partir la regiones de Arica y Parinacota, Tarapacá y Antofagasta.</p>
             <br>
             <br>
           </div>
