Tercer comentario: Editado párrafo card

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           <img src="./assets/img/card3.jpg" class="card-img-top pb-2" alt="Plumón Coral Fleece">
           <div class="card-body">
             <h5 class="card-title">Zona Norte</h5>
-            <p class="card-text">El Norte grande es una de las cinco regiones naturales en que tradicionalmente se divide Chile. Se inicia a partir la regiones de Arica y Parinacota, Tarapacá y Antofagasta.</p>
+            <p class="card-text">El Norte grande es una de las cinco regiones naturales en que tradicionalmente se divide Chile. Se inicia a partir la regiones de Arica y Parinacota, Tarapacá, Antofagasta.</p>
             <br>
             <br>
           </div>
@@ -185,7 +185,7 @@
             <div class="col-2">
               <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram fa-2x" style="border-bottom:20px; padding: 0%;"></i></a>              
             </div >
-            <div class= "col-2"><a href="https://github.com/masterwayne1988/Viajes_Chile.git">Enlace perfil GitHub</a></div>
+            <div class= "col-2"><a href="https://github.com/masterwayne1988/Viajes_Chile.git">Enlace perfil Github</a></div>
           </div>
         </div>
       </div>
