Cuarto comentario:Editado texto navbar

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="navbar-nav ms-auto">
           <a class="nav-link active" aria-current="page" href="#">Inicio</a>
           <a class="nav-link" href="#">Quienes somos</a>
-          <a class="nav-link" href="#">Destacados</a>
+          <a class="nav-link" href="#">Destacado</a>
           <a class="nav-link" href="#">Contacto</a>
         </div>
       </div>
