Quinto comentario:editada documentación redes sociales

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         </div>
         <div class="col-7">
           <div class="row text-light">
-            <!-- Iconos de redes sociales disponibles -->
+            <!-- Iconos redes sociales disponibles -->
             <div class="col-2">
               <a href="https://www.facebook.com/?locale=es_LA"><i class="fa-brands fa-facebook fa-2x" style="border-bottom:20px; padding: 0%;"></i></a>
             </div>
